--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Variables used throughout the theme.
+ * Variables used throughout the theme. (purple B509AC)
  * To adjust anything, simply edit the variables below and rebuild the theme.
  ******************************************************************************/
 
@@ -17,7 +17,7 @@ $green-color-lime:    #B7D12A !default;
 $green-color-dark:    #009f06 !default;
 $green-color-light:   #ddffdd !default;
 $green-color-bright:  #11D68B !default;
-$purple-color:        #B509AC !default;
+$purple-color:        #013220 !default; 
 $light-purple-color:  lighten($purple-color, 25%);
 $pink-color:          #f92080 !default;
 $pink-color-light:    #ffdddd !default;
