--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -98,8 +98,8 @@
           {%- if entry.arxiv %}
             <a href="http://arxiv.org/abs/{{ entry.arxiv }}" class="btn btn-sm z-depth-0" role="button">arXiv</a>
           {%- endif %}
-          {%- if entry.HAL %}
-            <a href="https://hal.archives-ouvertes.fr/{{ entry.HAL }}" class="btn btn-sm z-depth-0" role="button">HAL</a>
+          {%- if entry.hal %}
+            <a href="https://hal.archives-ouvertes.fr/{{ entry.hal }}" class="btn btn-sm z-depth-0" role="button">HAL</a>
           {%- endif %}     
           {%- if entry.doi %}
             <a href="https://doi.org/{{ entry.doi }}" class="btn btn-sm z-depth-0" role="button">DOI</a>
